--- a/webServer/www/views/admin.ejs
+++ b/webServer/www/views/admin.ejs
@@ -14,14 +14,14 @@
       <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.1/js/mdb.min.js"></script>
       <script type="text/javascript" src="/javascript/chart.js"></script>
-      <script type="text/javascript" src="/javascript/helper.js"></script>
+      <script type="text/javascript" src="/javascript/expand-table.js"></script>
       <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
     	<!-- write the header -->
       <% include partials/header %>
       
-      <div class="container">
+      <div class="container admin-container">
         <div class="row">
           <div class="col-md-12">
             <h2>System Usage</h2>
@@ -77,7 +77,7 @@
         </div>
         <div class="row" id="reports">
           <div class="col-md-12">
-            <h2>Reports</h2>
+            <h2>ReportS</h2>
           </div>
         </div>
         <div class="row">
@@ -110,10 +110,9 @@
       </div>
 
 
-
       <div class="footer-container">
-            <a class="footer-content" href="ebinizerlop@gmail.com">Email Us</a>
-            <span class ="footer-content" >&copy; Copyright 1738. No Rights Reserved</span>
+        <a class="footer-content" href="ebinizerlop@gmail.com">Email Us</a>
+        <span class ="footer-content" >&copy; Copyright 1738. No Rights Reserved</span>
       </div>
 
     </body>
