--- a/webServer/www/views/home.ejs
+++ b/webServer/www/views/home.ejs
@@ -19,7 +19,7 @@
 	<!-- write the header -->
 	<% include partials/header %>
 
-	<div class="container" id="home-wrapper">
+	<div class="container wrapper">
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 50px">Stylize</h1></div>
 		</div>
@@ -106,10 +106,10 @@
 	  </div>
 	</div>
 
-		<div class="footer-container">
-	        <a class="footer-content" href="ebinizerlop@gmail.com">Email Us</a>
-	        <span class ="footer-content" >&copy; Copyright 1738. No Rights Reserved</span>
-	  </div>
+	<div class="footer-container">
+        <a class="footer-content" href="ebinizerlop@gmail.com">Email Us</a>
+        <span class ="footer-content" >&copy; Copyright 1738. No Rights Reserved</span>
+  	</div>
 
 </body>
 
