--- a/webServer/www/views/admin.ejs
+++ b/webServer/www/views/admin.ejs
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="row">
-          <table class="table table-striped">
+          <table class="table table-striped" id="admin-table">
             <thead>
               <tr>
                 <th>Date</th>
