--- a/webServer/www/views/profile.ejs
+++ b/webServer/www/views/profile.ejs
@@ -13,7 +13,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-  <script type="text/javascript" src="/javascript/helper.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
@@ -31,7 +30,7 @@
         <div class="col-md-4">
           <form>
             <label for="username">Username</label>
-            <input type="text" class="form-control" placeholder="fart_sniffer57" readonly="readonly" id="username">
+            <input type="text" class="form-control" placeholder=<%= user.username %> readonly="readonly" id="username">
           </form>
         </div>
       </div>
@@ -39,7 +38,7 @@
         <div class="col-md-4 col-md-offset-4">
           <form>
             <label for="pwd" id="pwd-label">Password</label>
-            <input type="text" class="form-control" placeholder="*********" readonly="readonly" id="pwd">
+            <input type="text" class="form-control" placeholder=<%= user.password %> readonly="readonly" id="pwd">
           </form>
         </div>
       </div>
