--- a/webServer/www/views/partials/header.ejs
+++ b/webServer/www/views/partials/header.ejs
@@ -6,15 +6,15 @@
         		<span class="icon-bar"></span>
         		<span class="icon-bar"></span>
       		</button>
-      		<a class="navbar-brand" href="/home">ASP</a>
+      		<a class="navbar-brand" href="/home"><img id="logo" src="/images/ArtilizerLogo_V4.png" width="50px" height="50px"></a>
     	</div>
     	<div class="collapse navbar-collapse" id="myNavbar">
       		<ul class="nav navbar-nav navbar-right">
-				<li><a href="/explore"><span class="=explore"></span>Explore</a></li>
-        		<li><a href="/about"><span class="=about"></span>About</a></li>
+				<li><a href="/explore"><span class="navbar-tab">Explore</span></a></li>
+        		<li><a href="/about"><span class="navbar-tab">About</span></a></li>
 	    		<!-- if the user isnt logged in display the loggin & signup link -->
 	    		<% if(!user){ %>
-	    			<li><a href="/login"><span class="login">Login</span></a></li>
+	    			<li><a href="/login"><span class="navbar-tab">Login</span></a></li>
 	    			<li><a href="/create-account"><span class="sign-up">Sign Up</span></a></li>
 	    		<% } %>
 	    		<!-- only display the dropdown if the user is logged in -->
