--- a/webServer/www/views/about.ejs
+++ b/webServer/www/views/about.ejs
@@ -18,12 +18,15 @@
     	<!-- write the header -->
       <% include partials/header %>
       
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
-          <div class="col-md-10 about-title col-md-offset-2">Turn Your Photos and Videos into Works of Art</div>
+          <div class="col-md-10 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 50px">Artilizer</h1></div>
+        </div>  
+        <div class="row">
+          <div class="col-md-10 about-title col-md-offset-1"><h1 style="margin-top: 10px">Turn Your Photos and Videos into Works of Art</h1></div>
         </div>
         <div class="row">
-          <div class="col-md-7 about-content col-md-offset-2">
+          <div class="col-md-8 about-content col-md-offset-1">
             <p>ASP is a service that allows you to artistically enhance your photos and videos by transferring the style of an artistic image onto your original content. With the help of a neural network we are able to separate and recombine content and style of arbitrary images</p>
           </div>
         </div>
