--- a/webServer/www/views/login.ejs
+++ b/webServer/www/views/login.ejs
@@ -1,60 +1,76 @@
 
 
-    <!DOCTYPE HTML>
-    <html lang="en">
-    <head>
-    	<title>ASP</title>
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
-      <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-    	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-      <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
-      <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-      <script type="text/javascript" src="/javascript/helper.js"></script>
-      <link rel="stylesheet" type="text/css" href="/css/style.css">
-    </head>
-    <body>
-    	<!-- write the header -->
-      <% include partials/header %>
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+	<title>ASP</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
+  <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+  <script type="text/javascript" src="/javascript/animations.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+</head>
+<body>
+	<!-- write the header -->
+  <% include partials/header %>
 
-      <div class="container login-container">
-
-          <!-- show any messages that come back with authentication -->
-          <% if (message.length > 0) { %>
-              <div class="alert alert-danger"><%= message %></div>
-          <% } %>
-
-        
-        <form action="/login" method="post">
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <div class="form-group">
-                <input class="form-control" id="input_username" type="text" placeholder="username" name="username">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <div class="form-group">
-                <input class="form-control" id="input_password" type="password" placeholder="password" name="password">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <button type="submit" class="btn btn-primary btn-lg btn-block button id="login-button">Login</button>
-            </div>
-          </div>
-        </form>
+  <h1 id="left-stick" class="">| </h1> 
+  <h1 id="right-stick" class=""> |</h1>
+  <div class="container login-container">
+    <div id="row">
+      <div class="col-md-12" style="text-align: center;">
+      <h1 id="A" class="logo-letters left-letter">A</h1>
+      <h1 id="R" class="logo-letters left-letter">R</h1>
+      <h1 id="T" class="logo-letters left-letter">T</h1>
+      <h1 id="I" class="logo-letters left-letter">I</h1> 
+      <h1 id="L" class="logo-letters left-letter">L</h1>
+      <h1 id="I2" class="logo-letters right-letter">I</h1>
+      <h1 id="Z" class="logo-letters right-letter">Z</h1>
+      <h1 id="E" class="logo-letters right-letter">E</h1>
+      <h1 id="R2" class="logo-letters right-letter">R</h1>
       </div>
-
-      <div class="footer-container">
-            <a class="footer-content" href="ebinizerlop@gmail.com">Email Us</a>
-            <span class ="footer-content" >&copy; Copyright 1738. No Rights Reserved</span>
+     </div>
+     <br/><br/><br/><br/><br/><br/> <br/><br/><br/> <br/><br/><br/>           
+    <form action="/login" method="post">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <div class="form-group">
+            <input class="form-control" id="input_username" type="text" placeholder="username" name="username">
+          </div>
+        </div>
       </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <div class="form-group">
+            <input class="form-control" id="input_password" type="password" placeholder="password" name="password">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <button type="submit" class="btn btn-primary btn-lg btn-block button id="login-button">Login</button>
+        </div>
+      </div>
+    </form>
+    <br>
+    <!-- show any messages that come back with authentication -->
+      <% if (message.length > 0) { %>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 alert alert-danger"><%= message %></div> 
+        </div>  
+      <% } %>
+  </div>
 
-    </body>
+  <div class="footer-container">
+        <a class="footer-content" href="ebinizerlop@gmail.com">Email Us</a>
+        <span class ="footer-content" >&copy; Copyright 1738. No Rights Reserved</span>
+  </div>
 
- 
+</body>
+
+
