--- a/webServer/www/public/css/style.css
+++ b/webServer/www/public/css/style.css
@@ -459,9 +459,74 @@ li { list-style-type:none;}
 	color: #FA7470;
 }
 
+#profile-btn:hover {
+	text-decoration: none !important;
+}
+
 
 /* ---- Account Page ---- */
 
 .account-content {
 	margin-top: 200px;
+}
+
+
+/* ---- Report Content Popup ---- */
+
+#contact { 
+  -webkit-user-select: none; /* Chrome/Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+  /*margin: 4em auto;
+  width: 100px; 
+  height: 30px; 
+  line-height: 30px;*/
+  background: #ff4d4d;
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+  border: 1px solid white;
+}
+
+#contact:hover { background: #666; }
+#contact:active { background: #444; }
+
+#contactForm { 
+  display: none;
+
+  border: 6px solid #FA7470; 
+  padding: 2em;
+  width: 400px;
+  text-align: center;
+  background: #fff;
+  position: fixed;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%,-50%)
+  
+}
+
+input, textarea { 
+  margin: .8em auto;
+  font-family: inherit; 
+  text-transform: inherit; 
+  font-size: inherit;
+  
+  display: block; 
+  width: 280px; 
+  padding: .4em;
+}
+textarea { height: 80px; resize: none; }
+
+.formBtn { 
+  width: 140px;
+  display: inline-block;
+  
+  background: #FA7470;
+  color: #fff;
+  font-weight: 100;
+  font-size: 1.2em;
+  border: none;
+  height: 30px;
 }
