--- a/webServer/www/views/explore.ejs
+++ b/webServer/www/views/explore.ejs
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<title>ASP</title>
+  <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
+  <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
   <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -12,7 +14,6 @@
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <script type="text/javascript" src="/javascript/home-grid.js"></script>
 	<script type="text/javascript" src="/javascript/open-image.js"></script>
-  <script type="text/javascript" src="/javascript/helper.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
@@ -20,7 +21,7 @@
   <% include partials/header %>
   <div class="container wrapper">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 50px">Explore</h1></div>
+      <div class="col-md-10 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 75px">Explore</h1></div>
     </div>
     <div class="row">
       <div class="col-md-10 col-md-offset-1"><h1 style="margin-top: 10px">Search for Profiles</h1></div>
@@ -74,18 +75,33 @@
   	  </div>
     </div>
 
-			<div class="modal fade" id="imagemodal" role="dialog">
+			<div class="modal fade content-modal" id="exploreModal" role="dialog">
     		<div class="modal-dialog">
       		<!-- Modal content-->
       		<div class="modal-content">
         		<div class="modal-header">
+              <button type="button" class="btn btn-primary modal-button"><a href="account.html" style="color:white;" id="profile-btn">Go to Profile</a></button>
           		<button type="button" class="close" data-dismiss="modal">&times;</button>
         		</div>
         		<div class="modal-body">
           		<img id="imagepreview" src="" style="width:100%;"/>
         		</div>
         		<div class="modal-footer">
-							<button type="button" class="btn btn-primary modal-button"><a href="account.html" style="color:white;">Go to Profile</a></button>
+
+							<button id="contact" class="btn btn-primary">Report Content</button>
+
+              <div id="contactForm">
+
+                <h1>Report Content</h1>
+                <small></small>
+                
+                <form action="#">
+                  <textarea placeholder="Reason for Report"></textarea>
+                  <input class="formBtn btn btn-primary" type="submit" />
+                  <input class="formBtn btn btn-primary" type="reset" />
+                </form>
+              </div>
+
           		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         		</div>
       		</div>
