pushing all my changes to remote

--- a/webServer/www/public/css/style.css
+++ b/webServer/www/public/css/style.css
@@ -20,7 +20,7 @@ html {
 
 .modal-button {
 	background-color: #FA7470 !important;
-	color: black !important;
+	color: white !important;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
@@ -271,30 +271,21 @@ li { list-style-type:none;}
 	left: 25%;*/
 }
 
-.logo-letters {
-	display: inline-block;
-	letter-spacing: 15px;
+.logo-div {
+/*	letter-spacing: 5px; */
 	font-weight:bold;
 	color: #FA7470;
-	font-size: 75px;
+	font-size: 50px;
 	opacity: 0;
+	display: inline-block;
 }
 
-#left-stick {
+#stick {
 	position: absolute;
 	top: 100px;
-	left: 49%;
+	left: 0%;
 	color: #FA7470;
-	font-size: 75px;
-	font-weight:bold;
-}
-
-#right-stick {
-	position: absolute;
-	top: 100px;
-	left: 49%;
-	color: #FA7470;
-	font-size: 75px;
+	font-size: 60px;
 	font-weight:bold;
 }
 
@@ -405,7 +396,7 @@ li { list-style-type:none;}
 }
 
 .admin-container {
-	margin-top: 100px;
+	margin-top: 75px;
 }
 
 
