--- a/webServer/www/views/about.ejs
+++ b/webServer/www/views/about.ejs
@@ -13,14 +13,15 @@
       <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
       <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
       <link rel="stylesheet" type="text/css" href="/css/style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
     	<!-- write the header -->
       <% include partials/header %>
       
-      <div class="container">
+      <div class="container wrapper">
         <div class="row">
-          <div class="col-md-10 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 50px">Artilizer</h1></div>
+          <div class="col-md-10 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 75px">Artilizer</h1></div>
         </div>  
         <div class="row">
           <div class="col-md-10 about-title col-md-offset-1"><h1 style="margin-top: 10px">Turn Your Photos and Videos into Works of Art</h1></div>
