--- a/webServer/www/views/explore.ejs
+++ b/webServer/www/views/explore.ejs
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="/javascript/home-grid.js"></script>
 	<script type="text/javascript" src="/javascript/open-image.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <!-- write the header -->
@@ -80,7 +81,7 @@
       		<!-- Modal content-->
       		<div class="modal-content">
         		<div class="modal-header">
-              <button type="button" class="btn btn-primary modal-button"><a href="account.html" style="color:white;" id="profile-btn">Go to Profile</a></button>
+              <button type="button" class="btn btn-primary modal-button"><a href="/account" style="color:white;" id="profile-btn">Go to Profile</a></button>
           		<button type="button" class="close" data-dismiss="modal">&times;</button>
         		</div>
         		<div class="modal-body">
