--- a/webServer/www/views/partials/header.ejs
+++ b/webServer/www/views/partials/header.ejs
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-inverse ">
+<nav class="navbar navbar-inverse navbar-toggleable-sm">
   	<div class="container-fluid">
     	<div class="navbar-header">
       		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        		<span class="icon-bar"></span>
-        		<span class="icon-bar"></span>
-        		<span class="icon-bar"></span>
+        		<span class="icon-bar class="navbar-toggler-icon""></span>
+        		<span class="icon-bar class="navbar-toggler-icon""></span>
+        		<span class="icon-bar class="navbar-toggler-icon""></span>
       		</button>
-      		<a class="navbar-brand" href="/home"><img id="logo" src="/images/ArtilizerLogo_V4.png" width="50px" height="50px"></a>
+      		<a class="navbar-brand" href="/home"><img id="logo" src="/images/logotwo.png" width="50px" height="50px"></a>
     	</div>
     	<div class="collapse navbar-collapse" id="myNavbar">
       		<ul class="nav navbar-nav navbar-right">
@@ -20,7 +20,7 @@
 	    		<!-- only display the dropdown if the user is logged in -->
 				<% if(user){ %>
 					<li class="dropdown">
-	          			<a class="dropdown-toggle profile" data-toggle="dropdown" href="#"><img id="profilePic" src="/images/pip.PNG" width="50px" height="50px"><span class="caret"></span></a>
+	          			<a class="dropdown-toggle profile" data-toggle="dropdown" href="#"><img id="profilePic" src="/images/pip.PNG" width="45px" height="45px"><span class="caret"></span></a>
 	          			<ul class="dropdown-menu">
 	            			<li>
 	            				<a href="/profile">Profile</a>
