--- a/webServer/www/views/account.ejs
+++ b/webServer/www/views/account.ejs
@@ -31,7 +31,7 @@
           </div>
       </div>
 
-    	<div class="account-content">
+    	<div class="content">
     	  <div class="grid">
     	    <div class="grid-sizer"></div>
     	    <div class="grid-item">
