--- a/webServer/www/views/create-account.ejs
+++ b/webServer/www/views/create-account.ejs
@@ -13,6 +13,7 @@
       <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
       <script type="text/javascript" src="/javascript/helper.js"></script>
       <link rel="stylesheet" type="text/css" href="/css/style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
     	<!-- write the header -->
