--- a/webServer/www/views/home.ejs
+++ b/webServer/www/views/home.ejs
@@ -15,14 +15,26 @@
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <script type="text/javascript" src="/javascript/home-grid.js"></script>
 <script type="text/javascript" src="/javascript/open-image.js"></script>
+<meta property="og:url"           content="/images/rowing.jpg" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10';
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+
 	<!-- write the header -->
 	<% include partials/header %>
 
 	<div class="container wrapper">
 		<div class="row">
-			<div class="col-md-10 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 75px">Stylize</h1></div>
+			<div class="col-md-8 col-md-offset-1"><h1 style="font-weight:bold; color: #FA7470; font-size: 75px">Stylize</h1></div>
 		</div>
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1"><h1 style="margin-top: 10px">Upload a Photo or Video to Style</h1></div>
@@ -114,6 +126,8 @@
           				<img id="uploaded-image" src="#" style="width:100%;"/>
         			</div>
         			<div class="modal-footer">
+        				<div class="fb-share-button" data-href="http://10.10.7.179:8085/public/images/pip.png" data-layout="button" data-size="small" data-mobile-iframe="true"><a style="float:left; width: 50px; height: 50px; margin-right: 10px;" class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F10.10.7.179%2Fpublic%2Fimages%2Fpip.png&amp;src=sdkpreparse"><img src="/images/facebook.png"/></a></div>
+        				<img src="/images/twitter.png" style="float:left; width: 50px; height: 50px"/>
 						<button type="button" class="btn btn-primary modal-button">Save content</button>
           				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         			</div>
@@ -125,12 +139,71 @@
       		<!-- Modal content-->
       			<div class="modal-content">
         			<div class="modal-header">
-          				<button type="button" class="close" data-dismiss="modal">&times;</button>
+          				<div class="container carousel-container">
+        					<div class="row">
+        						<div class="col-md-12" style="text-align: center">Choose Style</div>
+        					</div>
+          					<div class="row">
+          						<div class="carousel" id="myCarousel">
+							        <div class="carousel-inner">
+							            <div class="item active">
+						                    <ul class="thumbnails">
+						                        <li class="col-sm-4 first-style-carousel">
+													<div class="thumbnail">
+														<a href="#"><img src="/images/rowing2.jpg" alt=""></a>
+						                            </div>
+						                        </li>
+						                        <li class="col-sm-4">
+													<div class="thumbnail">
+														<a href="#"><img src="/images/rowing2.jpg" alt=""></a>
+													</div>
+						                        </li>
+						                        <li class="col-sm-4">
+													<div class="thumbnail">
+														<a href="#"><img src="/images/rowing2.jpg" alt=""></a>
+													</div>
+						                        </li>
+						                    </ul>
+						              	</div><!-- /Slide1 --> 
+						            	<div class="item">
+						                    <ul class="thumbnails">
+						                        <li class="col-sm-4 first-style-carousel">
+													<div class="thumbnail">
+														<a href="#"><img src="/images/rowing.jpg" alt=""></a>
+													</div>
+						                        </li>
+						                        <li class="col-sm-4">
+													<div class="thumbnail">
+														<a href="#"><img src="/images/rowing.jpg" alt=""></a>
+													</div>
+						                        </li>
+						                        <li class="col-sm-4">
+													<div class="thumbnail">
+														<a href="#"><img src="/images/rowing.jpg" alt=""></a>
+													</div>
+						                        </li>
+						                    </ul>
+						             	</div><!-- /Slide2 -->  
+							        </div>
+							    </div>	
+    							<!-- <div class="styles"></div>
+    							<div class="styles"></div>
+    							<div class="styles"></div> -->
+    						</div>
+    						<nav>
+							<ul class="control-box pager">
+								<li><a data-slide="prev" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-left"></i></a></li>
+								<li><a data-slide="next" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-right"></i></li>
+							</ul>
+						</nav>
+    					</div>
         			</div>
         			<div class="modal-body">
           				<img id="imagepreview" src="" style="width:100%;"/>
         			</div>
         			<div class="modal-footer">
+        				<div class="fb-share-button" data-href="http://10.10.7.179:8085/public/images/pip.png" data-layout="button" data-size="small" data-mobile-iframe="true"><a style="float:left; width: 50px; height: 50px; margin-right: 10px;" class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F10.10.7.179%2Fpublic%2Fimages%2Fpip.png&amp;src=sdkpreparse"><img src="/images/facebook.png"/></a></div>
+        				<img src="/images/twitter.png" style="float:left; width: 50px; height: 50px"/>
           				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         			</div>
       			</div>
