--- a/webServer/www/views/profile.ejs
+++ b/webServer/www/views/profile.ejs
@@ -14,6 +14,7 @@
   <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<!-- write the header -->
