fixed the carousels

--- a/webServer/www/views/home.ejs
+++ b/webServer/www/views/home.ejs
@@ -68,7 +68,7 @@
         						<div class="col-md-12" style="text-align: center">Choose Style</div>
         					</div>
           					<div class="row">
-          						<div class="carousel" id="myCarousel">
+          						<div class="carousel" id="uploadCarousel">
 							        <div class="carousel-inner">
 							            <div class="item active">
 						                    <ul class="thumbnails">
@@ -116,8 +116,8 @@
     						</div>
     						<nav>
 							<ul class="control-box pager">
-								<li><a data-slide="prev" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-left"></i></a></li>
-								<li><a data-slide="next" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-right"></i></li>
+								<li><a data-slide="prev" href="#uploadCarousel" class=""><i class="glyphicon glyphicon-chevron-left"></i></a></li>
+								<li><a data-slide="next" href="#uploadCarousel" class=""><i class="glyphicon glyphicon-chevron-right"></i></li>
 							</ul>
 						</nav>
     					</div>
