--- a/webServer/www/public/css/style.css
+++ b/webServer/www/public/css/style.css
@@ -282,10 +282,10 @@ li { list-style-type:none;}
 
 #stick {
 	position: absolute;
-	top: 100px;
+	top: 85px;
 	left: 0%;
 	color: #FA7470;
-	font-size: 60px;
+	font-size: 70px;
 	font-weight:bold;
 }
 
@@ -293,17 +293,16 @@ li { list-style-type:none;}
 
 .footer-container {
 	width: 100%;
-	border-top: 1px solid #FA7470;
-	height: 125px;
+	/*border-top: 1px solid #FA7470;*/
 	margin-top: 200px;
+	margin-bottom: 45px;
 	text-align: center;
-	line-height: 125px;
-	color: gray;
+	/*line-height: 125px;*/
+	color: #A9A9A9;
 }
 
 .footer-content {
-	margin-left: 10px;
-	display: inline-block;
+	display: block;
 }
 
 /* ---- About Page ---- */
@@ -322,7 +321,20 @@ li { list-style-type:none;}
 }
 
 #pwd-label {
-	margin-top: 15px;
+	margin-top: 10px;
+}
+
+#changeProfilePicInput {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+#changeProfilePicInput + label {
+	cursor: pointer; /* "hand" cursor */
 }
 
 
