upload premium style thumbnail

--- a/webServer/www/views/home.ejs
+++ b/webServer/www/views/home.ejs
@@ -73,8 +73,8 @@
 							            <div class="item active">
 						                    <ul class="thumbnails">
 						                        <li class="col-sm-4 first-style-carousel">
-													<div class="thumbnail">
-														<a href="#"><img src="/images/rowing2.jpg" alt=""></a>
+													<div class="thumbnail" style="text-align: center; height: 135px; line-height: 130px;" >Upload Style
+														<a href="#"></a>
 						                            </div>
 						                        </li>
 						                        <li class="col-sm-4">
